2003-08-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/Makefile.am: added mod_mono_unix.
	* src/mod_mono_unix.c: New module that communicates with an external
	process through a unix socket.

	* INSTALL: updated.

2003-04-12  Miguel de Icaza  <miguel@ximian.com>

	* src/mod_mono.c (create_application_host): Add call to
	mono_config_parse to load the default configuration file.  Maybe
	this should also be exposed to the Apache configuration file. 

2003-04-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/ApacheWorkerRequest.cs: fixed compilation.

2003-03-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: added a MapPathEvent that is fired before
	doing the normal MapPath stuff and can provide alternate mappings.

2003-03-11  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/Request.cs: We need to check for length returned equal to 0 in alias_matches
	* src/mod_mono.c: fixed bug when matching prefix that made mod_mono handle all pages even those
	outside MonoApplication scope. Also fixed the way alias_matches is exposed to Request
	* FAQ.txt: Added some answers about Apache 1.3 and how to use proxypass
	* packaging/redhat/mod_mono.spec: Update to 0.3.6
	
2003-02-25  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	Bring it up to date with Mono 0.20
	* src/mod_mono.c: added mono_thread_attach (thanks Dick). Return NULL if header not found.
	* src/ApacheApplicationHost.cs: Add an internal method so the call will
	be made in the right domain, as suggested by Dietmar. This can be done from C, but was added after 
	Mono 0.20. It also required a serialization constructor for IntPtr that Gonzalo promptly added, thanks!
	* packaging/redhat/mod_mono.spec: Update for latest versions
	
2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: updated from xsp.

2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/MonoWorkerRequest.cs: fixed buglet in GetAppPath.
