@@ -1,4 +1,6 @@
 
+[please take a look at doc/ for latest documentation]
+
 mod_mono and mod_mono_unix
 -------------------------------
 
