@@ -19,8 +19,8 @@ lib_LTLIBRARIES = libmod_mono.la \
 
 
 make_so:
-	@if test ! -L libmod_mono.so ; then ln -s .libs/libmod_mono.so . ; fi
-	@if test ! -L libmod_mono_unix.so ; then ln -s .libs/libmod_mono_unix.so . ; fi
+	@if test ! -L mod_mono.so ; then ln -s .libs/libmod_mono.so mod_mono.so ; fi
+	@if test ! -L mod_mono_unix.so ; then ln -s .libs/libmod_mono_unix.so mod_mono_unix.so ; fi
 
 install:
 	$(INSTALL) -m 644 .libs/libmod_mono.so $(LIBEXECDIR)/mod_mono.so
